Split Join 예시 코드 생성